<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_movie_details">

    <ImageView
        android:id="@+id/image_robert"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="7dp"
        android:src="@drawable/robert_downey"
        app:layout_constraintHorizontal_weight="1"
        android:adjustViewBounds="true"


        app:layout_constraintEnd_toStartOf="@+id/image_chris_evans"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cast" />

    <ImageView
        android:id="@+id/image_chris_evans"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="7dp"
        android:src="@drawable/chris_evans"
        app:layout_constraintHorizontal_weight="1"
        android:adjustViewBounds="true"



        app:layout_constraintEnd_toStartOf="@+id/image_mark_ruffalo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/image_robert"
        app:layout_constraintTop_toBottomOf="@id/cast" />

    <ImageView
        android:id="@+id/image_mark_ruffalo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="7dp"
        android:src="@drawable/mark_ruffalo"
        app:layout_constraintHorizontal_weight="1"
        android:adjustViewBounds="true"


        app:layout_constraintEnd_toStartOf="@+id/image_chris_hemsw"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/image_chris_evans"
        app:layout_constraintTop_toBottomOf="@id/cast" />

    <ImageView
        android:id="@+id/image_chris_hemsw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="7dp"
        android:src="@drawable/chris_hemsworth"
        app:layout_constraintHorizontal_weight="1"
        android:adjustViewBounds="true"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/image_mark_ruffalo"
        app:layout_constraintTop_toBottomOf="@id/cast"
        android:layout_marginEnd="16dp"/>

    <ImageView
        android:id="@+id/back"
        android:layout_width="6dp"
        android:layout_height="16dp"
        android:layout_marginStart="18dp"

        android:layout_marginTop="59dp"
        android:background="@drawable/back"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:numStars="5"
        style="@style/myRatingBar"
        android:layout_width="wrap_content"
        android:layout_height="12dp"

        android:layout_marginTop="8dp"
        android:foregroundGravity="center_vertical"



        android:rating="4.4"
        android:stepSize="0.1"
        app:layout_constraintStart_toStartOf="@id/genre"
        app:layout_constraintTop_toBottomOf="@id/genre" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="184dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="-7sp"
        android:text="@string/title_movie_details"
        android:textAllCaps="false"
        android:textAppearance="@style/title_movie_details"
        android:textIsSelectable="false"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="16dp"
        android:layout_marginTop="226dp"
        android:gravity="center_vertical"
        android:text="@string/age_limit_movie_details"
        android:textAppearance="@style/age_limit_movie_details"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintBottom_toTopOf="@id/title" />

    <TextView
        android:id="@+id/genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="4sp"
        android:text="@string/genre_movie_details"
        android:textAppearance="@style/genre_movie_details"
        app:layout_constraintStart_toStartOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/reviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="4sp"

        android:text="@string/rewiews"
        android:textAllCaps="true"
        android:textAppearance="@style/reviews"
        app:layout_constraintStart_toEndOf="@id/ratingBar"
        app:layout_constraintTop_toBottomOf="@id/genre" />

    <TextView
        android:id="@+id/storyLine"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="4sp"
        android:text="@string/storyLine"
        android:textAppearance="@style/storyLine"

        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/ratingBar"

        app:layout_constraintTop_toBottomOf="@id/ratingBar" />

    <TextView
        android:id="@+id/story"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha="0.75"
        android:gravity="center_vertical"
        android:lineSpacingExtra="2sp"
        android:text="@string/story"
        android:textAppearance="@style/story"

        app:layout_constraintStart_toStartOf="@id/storyLine"
        app:layout_constraintTop_toBottomOf="@id/storyLine"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        />

    <TextView
        android:id="@+id/cast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="8sp"
        android:text="@string/cast"

        android:textAppearance="@style/cast"
        app:layout_constraintStart_toStartOf="@id/story"
        app:layout_constraintTop_toBottomOf="@id/story" />

    <TextView
        android:id="@+id/name_robert"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:lineSpacingExtra="2sp"
        android:text="@string/robert_down"
        android:textAppearance="@style/name"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="@id/image_robert"
        app:layout_constraintStart_toStartOf="@id/image_robert"
        app:layout_constraintTop_toBottomOf="@id/image_robert" />

    <TextView
        android:id="@+id/name_chris_evans"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:lineSpacingExtra="2sp"
        android:text="@string/chris_evans"
        android:textAppearance="@style/name"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="@id/image_chris_evans"
        app:layout_constraintStart_toStartOf="@id/image_chris_evans"
        app:layout_constraintTop_toBottomOf="@id/image_chris_evans" />

    <TextView
        android:id="@+id/name_mark_ruffalo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:lineSpacingExtra="2sp"
        android:text="@string/mark_ruffalo"
        android:textAppearance="@style/name"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="@+id/image_mark_ruffalo"
        app:layout_constraintStart_toStartOf="@+id/image_mark_ruffalo"
        app:layout_constraintTop_toBottomOf="@+id/image_mark_ruffalo" />

    <TextView
        android:id="@+id/name_chris_hemsw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:lineSpacingExtra="2sp"
        android:text="@string/chris_hemsw"
        android:textAppearance="@style/name"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="@+id/image_chris_hemsw"
        app:layout_constraintStart_toStartOf="@+id/image_chris_hemsw"
        app:layout_constraintTop_toBottomOf="@+id/image_chris_hemsw" />

    <TextView
        android:id="@+id/back_tv"
        android:layout_width="28dp"
        android:layout_height="16dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="8dp"
        android:alpha="0.5"
        android:gravity="center_horizontal|center_vertical"
        android:lineSpacingExtra="2sp"
        android:text="@string/back"


        android:textAppearance="@style/back"
        app:layout_constraintBottom_toBottomOf="@id/back"
        app:layout_constraintStart_toEndOf="@id/back"
        app:layout_constraintTop_toTopOf="@id/back" />


</androidx.constraintlayout.widget.ConstraintLayout>