<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movie"
    android:layout_width="170dp"
    android:layout_height="296dp"
    android:layout_marginTop="8dp"
    android:clipToOutline="true"
    android:background="@drawable/widow_bg"
    android:elevation="24dp">
    <ImageView
        android:id="@+id/tooltip_image"
        android:layout_width="match_parent"
        android:layout_height="248dp"
        app:layout_constraintStart_toStartOf="@id/movie"
        app:layout_constraintTop_toTopOf="@id/movie"
        app:layout_constraintEnd_toEndOf="@id/movie"
        android:layout_marginTop="2dp"
        android:layout_marginHorizontal="2dp"
        app:cardCornerRadius="6dp"
        android:src="@drawable/movie_avg_gradient"
        android:background="@drawable/movie_avangers_movie_list"><!-- Устанавливаем радиус закругления углов -->

    </ImageView>
    <TextView
        android:id="@+id/img_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age_limit_movie_details"
        android:background="@drawable/rectangle"
        android:gravity="center_horizontal|center_vertical"
        android:textAppearance="@style/age_limit_movie_details"
        android:textStyle="bold"

        app:layout_constraintTop_toTopOf="@id/tooltip_image"
        app:layout_constraintStart_toStartOf="@id/tooltip_image"

        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"/>

    <RatingBar
        android:id="@+id/ratingBar"

        android:numStars="5"
        android:layout_width="wrap_content"
        android:layout_height="8dp"
        android:layout_marginTop="4dp"
        android:foregroundGravity="center_vertical"

        style="@style/myRatingBar_movie"

        android:rating="4"
        android:stepSize="1"

        app:layout_constraintStart_toStartOf="@id/genre"
        app:layout_constraintTop_toBottomOf="@id/genre" />
    <TextView
        android:id="@+id/reviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:gravity="center_vertical"
        android:lineSpacingExtra="4sp"
        android:textSize="8sp"

        android:text="@string/rewiews"
        android:textAllCaps="true"
        android:textAppearance="@style/reviews"
        app:layout_constraintStart_toEndOf="@id/ratingBar"
        app:layout_constraintTop_toTopOf="@id/ratingBar"
        app:layout_constraintBottom_toBottomOf="@id/ratingBar"/>
    <TextView
        android:id="@+id/genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:gravity="center_vertical"
        android:textSize="8sp"
        android:lineSpacingExtra="4sp"
        android:text="@string/genre_movie_details"
        android:textAppearance="@style/genre_movie_details"

        app:layout_constraintStart_toStartOf="@+id/tooltip_image"
        app:layout_constraintTop_toTopOf="@+id/tooltip_image"

        android:layout_marginTop="214dp"
        android:layout_marginStart="8dp"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/like"

        app:layout_constraintEnd_toEndOf="@id/tooltip_image"
        app:layout_constraintTop_toTopOf="@id/img_age"
        app:layout_constraintBottom_toBottomOf="@id/img_age"

        android:layout_marginEnd="6dp"
        />
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="6dp"
        android:layout_marginTop="8dp"

        app:layout_constraintTop_toBottomOf="@id/tooltip_image"
        app:layout_constraintStart_toStartOf="@id/tooltip_image"

        android:text="@string/title_movie_AVG"
        android:textAppearance="@style/title_movie_details"
        android:textSize="14sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/film_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/film_duration"
        android:textAppearance="@style/film_duration"
        android:lineSpacingExtra="3sp"


        app:layout_constraintStart_toStartOf="@id/title"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:gravity="center_vertical|start"/>



</androidx.constraintlayout.widget.ConstraintLayout>